--- a/akademik.html
+++ b/akademik.html
@@ -649,7 +649,7 @@
                 </button>
                 <div class="bBody">
                   <div class="pillRow">
-                    <a class="pill" href="https://drive.google.com/drive/folders/1_mfA8XdLD-jNh9iAY-TQI8cVX4Cb1c2r?usp=drive_link" data-subject="bm"><span class="pillDot"></span>Bahasa Melayu</a>
+                    <a class="pill" href="https://drive.google.com/drive/folders/1_mfA8XdLD-jNh9iAY-TQI8cVX4Cb1c2r?usp=sharing" data-subject="bm"><span class="pillDot"></span>Bahasa Melayu</a>
                     <a class="pill" href="https://drive.google.com/drive/u/1/folders/16QLCfvzaeglZf9xEAfOq63zyvuAhHOoS" data-subject="bi"><span class="pillDot"></span>Bahasa Inggeris</a>
                     <a class="pill" href="https://drive.google.com/drive/u/1/folders/1yfCGKncaOedn60xIE3n_AQuT_JJ7LU8G" data-subject="ba"><span class="pillDot"></span>Bahasa Arab</a>
                     <a class="pill" href="https://drive.google.com/drive/u/1/folders/1GsbelXggZoAQUL9G2prPtB12MBDxHvzV" data-subject="bkd"><span class="pillDot"></span>Kesusteraan Melayu</a>
