--- a/akademik.html
+++ b/akademik.html
@@ -937,11 +937,11 @@
     const LINKS = {
       bm: {
         pengurusan: "https://drive.google.com/drive/folders/1_mfA8XdLD-jNh9iAY-TQI8cVX4Cb1c2r?usp=sharing",
-        pekeliling: "https://drive.google.com/drive/folders/AAA_BM_PEKELILING",
-        mesyuarat: "https://drive.google.com/drive/folders/AAA_BM_MESYUARAT",
-        pentaksiran: "https://drive.google.com/drive/folders/AAA_BM_PENTAKSIRAN",
-        perancangan: "https://drive.google.com/drive/folders/AAA_BM_PERANCANGAN",
-        kewangan: "https://drive.google.com/drive/folders/AAA_BM_KEWANGAN",
+        pekeliling: "https://drive.google.com/drive/folders/103iYyYK_NDMH4vlD7EMk9KwhTfLD_Obp?usp=sharing",
+        mesyuarat: "https://drive.google.com/drive/folders/1cu6yTjH0dr2xYDzLe65aGhJxMhHhRtRH?usp=sharing",
+        pentaksiran: "https://drive.google.com/drive/folders/1QUKk5DTCA2ndC-zj1Td9Ez7ssBQffRD0?usp=sharing",
+        perancangan: "https://drive.google.com/drive/folders/19AwsEnKQlmcjwFmolZWPD6BxEiz-s99d?usp=sharing",
+        kewangan: "https://drive.google.com/drive/folders/19AwsEnKQlmcjwFmolZWPD6BxEiz-s99d?usp=sharing",
       },
       bi: {
         pengurusan: "https://drive.google.com/drive/folders/1ryrD8GHenPvkzyWXKkze9HcgVNQKW9z6?usp=sharing",
