--- a/gallery.html
+++ b/gallery.html
@@ -1,1 +1,313 @@
+<!doctype html>
+<html lang="en">
+<head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Figma-ish Background Motion (Pure JS)</title>
+<style>
+  :root{
+    --bg0: url("https://images.unsplash.com/photo-1500530855697-b586d89ba3ee?auto=format&fit=crop&w=2000&q=70");
+    --bg1: url("https://images.unsplash.com/photo-1520975661595-6453be3f7070?auto=format&fit=crop&w=2000&q=70");
+    --bg2: url("https://images.unsplash.com/photo-1519681393784-d120267933ba?auto=format&fit=crop&w=2000&q=70");
+    --card: rgba(255,255,255,.08);
+    --stroke: rgba(255,255,255,.18);
+    --text: rgba(255,255,255,.92);
+    --muted: rgba(255,255,255,.70);
+  }
 
+  html,body{height:100%; margin:0; background:#070a12; font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial;}
+  .stage{
+    position:relative;
+    min-height:100%;
+    overflow:hidden;
+    color:var(--text);
+  }
+
+  /* ====== Background stack ====== */
+  .bg{
+    position:absolute; inset:-10%;
+    transform: translate3d(0,0,0) scale(1.08);
+    will-change: transform, opacity, filter;
+    background-size: cover;
+    background-position: center;
+    filter: saturate(1.05) contrast(1.05);
+  }
+  .bg.a{ background-image: var(--bg0); opacity:1; }
+  .bg.b{ background-image: var(--bg1); opacity:0; }
+  .bg.c{ background-image: var(--bg2); opacity:0; }
+
+  /* soft vignette */
+  .vignette{
+    position:absolute; inset:0;
+    background:
+      radial-gradient(1200px 700px at 20% 10%, rgba(130,180,255,.20), transparent 55%),
+      radial-gradient(900px 600px at 80% 30%, rgba(255,120,200,.18), transparent 55%),
+      radial-gradient(1100px 900px at 50% 120%, rgba(20,30,60,.85), rgba(10,12,18,.95) 70%);
+    pointer-events:none;
+  }
+
+  /* spotlight glow follows cursor */
+  .spot{
+    position:absolute; inset:0;
+    background: radial-gradient(420px 320px at var(--mx, 50%) var(--my, 50%),
+      rgba(255,255,255,.14), rgba(255,255,255,0) 70%);
+    mix-blend-mode: screen;
+    pointer-events:none;
+  }
+
+  /* film grain (cheap + nice) */
+  .grain{
+    position:absolute; inset:-20%;
+    background-image:
+      url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='220' height='220'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='.9' numOctaves='2' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='220' height='220' filter='url(%23n)' opacity='.35'/%3E%3C/svg%3E");
+    opacity:.10;
+    transform: translate3d(0,0,0);
+    animation: grainMove 7s steps(8) infinite;
+    pointer-events:none;
+  }
+  @keyframes grainMove{
+    0%{ transform: translate3d(-2%, -2%, 0); }
+    25%{ transform: translate3d(2%, -1%, 0); }
+    50%{ transform: translate3d(1%, 2%, 0); }
+    75%{ transform: translate3d(-1%, 1%, 0); }
+    100%{ transform: translate3d(-2%, -2%, 0); }
+  }
+
+  /* ====== Content ====== */
+  .shell{
+    position:relative;
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 28px 18px 80px;
+  }
+
+  .topbar{
+    display:flex; gap:14px; align-items:center; justify-content:space-between;
+    padding: 14px 16px;
+    border:1px solid rgba(255,255,255,.10);
+    background: linear-gradient(180deg, rgba(255,255,255,.08), rgba(255,255,255,.04));
+    backdrop-filter: blur(14px);
+    border-radius: 18px;
+  }
+  .brand{display:flex; align-items:center; gap:10px; font-weight:700; letter-spacing:.2px;}
+  .dot{width:10px; height:10px; border-radius:999px; background: linear-gradient(135deg, #7df, #f7a); box-shadow: 0 0 18px rgba(160,200,255,.35);}
+  .nav{display:flex; gap:10px; align-items:center;}
+  .pill{
+    border:1px solid rgba(255,255,255,.12);
+    background: rgba(255,255,255,.06);
+    color: var(--text);
+    padding: 9px 12px;
+    border-radius: 999px;
+    font-size: 13px;
+    cursor:pointer;
+    transition: transform .18s cubic-bezier(.2,.8,.2,1), background .18s, border-color .18s;
+  }
+  .pill:hover{ transform: translateY(-1px); background: rgba(255,255,255,.10); border-color: rgba(255,255,255,.20); }
+
+  .hero{
+    margin-top: 22px;
+    display:grid;
+    grid-template-columns: 1.4fr 1fr;
+    gap: 16px;
+  }
+  @media (max-width: 900px){
+    .hero{ grid-template-columns: 1fr; }
+  }
+
+  .card{
+    border:1px solid rgba(255,255,255,.12);
+    background: linear-gradient(180deg, rgba(255,255,255,.09), rgba(255,255,255,.05));
+    backdrop-filter: blur(16px);
+    border-radius: 22px;
+    padding: 18px;
+    box-shadow: 0 18px 60px rgba(0,0,0,.35);
+    transform: translate3d(0,0,0);
+    transition: transform .18s cubic-bezier(.2,.8,.2,1);
+    will-change: transform;
+  }
+  .card:hover{ transform: translate3d(0,-2px,0); }
+
+  .title{ font-size: 44px; line-height: 1.08; margin: 0 0 8px; letter-spacing:-.6px; }
+  .sub{ margin:0; color:var(--muted); max-width: 52ch; }
+
+  .grid{
+    margin-top: 16px;
+    display:grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 12px;
+  }
+  @media (max-width: 900px){ .grid{ grid-template-columns: repeat(2, 1fr);} }
+  @media (max-width: 560px){ .grid{ grid-template-columns: 1fr;} }
+
+  .thumb{
+    height: 140px;
+    border-radius: 18px;
+    border: 1px solid rgba(255,255,255,.12);
+    background: rgba(255,255,255,.06);
+    overflow:hidden;
+    position:relative;
+    cursor:pointer;
+    transform: translate3d(0,0,0);
+    transition: transform .18s cubic-bezier(.2,.8,.2,1);
+  }
+  .thumb:hover{ transform: translate3d(0,-2px,0); }
+  .thumb::after{
+    content:"";
+    position:absolute; inset:0;
+    background: radial-gradient(500px 260px at 20% 10%, rgba(255,255,255,.18), transparent 60%);
+    opacity:.6;
+  }
+  .thumb span{
+    position:absolute; left:12px; bottom:10px;
+    font-size:12px; color: rgba(255,255,255,.85);
+    background: rgba(0,0,0,.25);
+    border:1px solid rgba(255,255,255,.12);
+    padding: 6px 10px;
+    border-radius: 999px;
+    backdrop-filter: blur(10px);
+  }
+
+  /* tiny hint */
+  .hint{
+    margin-top: 14px;
+    color: rgba(255,255,255,.55);
+    font-size: 12px;
+  }
+</style>
+</head>
+<body>
+  <div class="stage" id="stage">
+    <div class="bg a" id="bgA"></div>
+    <div class="bg b" id="bgB"></div>
+    <div class="bg c" id="bgC"></div>
+    <div class="vignette"></div>
+    <div class="spot" id="spot"></div>
+    <div class="grain"></div>
+
+    <div class="shell">
+      <div class="topbar">
+        <div class="brand"><span class="dot"></span>Dashboard-SMKG • Gallery</div>
+        <div class="nav">
+          <button class="pill" data-bg="0">Nature</button>
+          <button class="pill" data-bg="1">City</button>
+          <button class="pill" data-bg="2">Night</button>
+          <button class="pill" id="shuffleBtn">Shuffle</button>
+        </div>
+      </div>
+
+      <section class="hero">
+        <div class="card" id="tiltCard">
+          <h1 class="title">Figma-ish motion, no frameworks.</h1>
+          <p class="sub">Background crossfades + parallax + grain + spotlight glow. Feels “designed”, but it’s just CSS transforms driven by JS.</p>
+
+          <div class="grid">
+            <div class="thumb" data-bg="0"><span>Lake • Parallax</span></div>
+            <div class="thumb" data-bg="1"><span>City • Crossfade</span></div>
+            <div class="thumb" data-bg="2"><span>Stars • Glow</span></div>
+            <div class="thumb" data-bg="1"><span>Motion • Easing</span></div>
+            <div class="thumb" data-bg="0"><span>Depth • Blur</span></div>
+            <div class="thumb" data-bg="2"><span>Grain • Texture</span></div>
+          </div>
+
+          <div class="hint">Move your pointer. Tap buttons. This is the “Figma feel” stack.</div>
+        </div>
+
+        <div class="card">
+          <h3 style="margin:0 0 8px;">What makes it feel premium</h3>
+          <div style="color:var(--muted); font-size:13px; line-height:1.55;">
+            • GPU transforms only (no layout anims)<br/>
+            • Crossfade instead of hard swap<br/>
+            • Noise + vignette hides banding<br/>
+            • Light follows cursor (micro delight)<br/>
+            • Cards float with subtle shadow ramp
+          </div>
+        </div>
+      </section>
+    </div>
+  </div>
+
+<script>
+(() => {
+  const stage = document.getElementById('stage');
+  const spot  = document.getElementById('spot');
+  const bgA   = document.getElementById('bgA');
+  const bgB   = document.getElementById('bgB');
+  const bgC   = document.getElementById('bgC');
+  const tiltCard = document.getElementById('tiltCard');
+  const shuffleBtn = document.getElementById('shuffleBtn');
+
+  const bgs = [bgA, bgB, bgC];
+  let active = 0;
+
+  // Smooth pointer tracking (no jitter)
+  let mx = 0.5, my = 0.5, tx = 0.5, ty = 0.5;
+
+  function setBg(targetIdx){
+    // Crossfade: bring chosen to 1, others to 0 (but keep active for kenburns motion)
+    active = targetIdx;
+    bgs.forEach((el, i) => el.style.opacity = (i === targetIdx ? '1' : '0'));
+  }
+
+  // Click handlers
+  document.querySelectorAll('[data-bg]').forEach(btn => {
+    btn.addEventListener('click', () => setBg(Number(btn.dataset.bg)));
+  });
+
+  shuffleBtn.addEventListener('click', () => {
+    setBg(Math.floor(Math.random()*3));
+  });
+
+  // Pointer -> CSS vars for spotlight and parallax
+  const onMove = (clientX, clientY) => {
+    const r = stage.getBoundingClientRect();
+    tx = (clientX - r.left) / r.width;
+    ty = (clientY - r.top) / r.height;
+    stage.style.setProperty('--mx', (tx*100).toFixed(2) + '%');
+    stage.style.setProperty('--my', (ty*100).toFixed(2) + '%');
+  };
+
+  stage.addEventListener('pointermove', (e) => onMove(e.clientX, e.clientY));
+  stage.addEventListener('touchmove', (e) => {
+    if(!e.touches?.[0]) return;
+    onMove(e.touches[0].clientX, e.touches[0].clientY);
+  }, {passive:true});
+
+  // RAF loop for buttery parallax + ken burns
+  let t0 = performance.now();
+  function tick(now){
+    const dt = (now - t0) / 1000;
+    t0 = now;
+
+    // ease pointer (spring-ish)
+    mx += (tx - mx) * 0.08;
+    my += (ty - my) * 0.08;
+
+    // Background parallax
+    const px = (mx - 0.5) * 28;   // translate px
+    const py = (my - 0.5) * 18;
+
+    // Ken Burns drift (slow)
+    const drift = Math.sin(now/6000) * 8;
+
+    bgs.forEach((el, i) => {
+      const z = (i === active ? 1.10 : 1.07);
+      el.style.transform = `translate3d(${(-px + drift)*0.6}px, ${(-py - drift)*0.5}px, 0) scale(${z})`;
+      // slightly blur inactive to make the active “pop”
+      el.style.filter = (i === active) ? 'saturate(1.05) contrast(1.05) blur(0px)' : 'saturate(1.00) contrast(1.02) blur(2px)';
+    });
+
+    // Card tilt (subtle)
+    const rx = (my - 0.5) * -6;
+    const ry = (mx - 0.5) *  8;
+    tiltCard.style.transform = `perspective(900px) rotateX(${rx.toFixed(2)}deg) rotateY(${ry.toFixed(2)}deg) translate3d(0,0,0)`;
+
+    requestAnimationFrame(tick);
+  }
+  requestAnimationFrame(tick);
+
+  // default bg
+  setBg(0);
+})();
+</script>
+</body>
+</html>
