--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
           <span class="reveal-text">Berabis</span>
           <span class="reveal-text">Cemerlang</span>
         </div>
-        <a href="gallery.html" class="gallery-hint" data-trans="true">Gallery</a>
+        <a href="/smkg/docs/akademik.html" class="gallery-hint" data-trans="true">Gallery</a>
       </section>
     </div>
   </div>
