--- a/akademik.html
+++ b/akademik.html
@@ -625,7 +625,7 @@
     <div class="nav">
       <!-- ADDED: theme toggle button -->
       <button class="themeBtn" id="themeToggle" type="button" aria-label="Toggle theme">☀ Light</button>
-      <a href="https://kenjcd.github.io/smkg/index.html">Back</a>
+      <a href="https://smk-gunsanad.github.io/smkg/index.html">Back</a>
     </div>
   </header>
 
