--- a/akademik.html
+++ b/akademik.html
@@ -944,7 +944,7 @@
         kewangan: "https://drive.google.com/drive/folders/19AwsEnKQlmcjwFmolZWPD6BxEiz-s99d?usp=sharing",
       },
       bi: {
-        pengurusan: "https://drive.google.com/drive/folders/1ryrD8GHenPvkzyWXKkze9HcgVNQKW9z6?usp=sharing",
+        pengurusan: "https://drive.google.com/drive/folders/16QLCfvzaeglZf9xEAfOq63zyvuAhHOoS?usp=drive_link",
         pekeliling: "https://drive.google.com/drive/folders/BBB_BI_PEKELILING",
         mesyuarat: "https://drive.google.com/drive/folders/BBB_BI_MESYUARAT",
         pentaksiran: "https://drive.google.com/drive/folders/BBB_BI_PENTAKSIRAN",
