--- a/akademik.html
+++ b/akademik.html
@@ -951,6 +951,14 @@
         perancangan: "https://drive.google.com/drive/folders/BBB_BI_PERANCANGAN",
         kewangan: "https://drive.google.com/drive/folders/BBB_BI_KEWANGAN",
       },
+            ba: {
+        pengurusan: "https://drive.google.com/drive/folders/1JOgzqG1g0-p2vjfhW5bsej9FWOBnW0h9?usp=drive_link",
+        pekeliling: "https://drive.google.com/drive/folders/BBB_BI_PEKELILING",
+        mesyuarat: "https://drive.google.com/drive/folders/1EXBic7wE77d6B39vAV5TCOCc6x0vo2hL?usp=sharingT",
+        pentaksiran: "https://drive.google.com/drive/folders/BBB_BI_PENTAKSIRAN",
+        perancangan: "https://drive.google.com/drive/folders/BBB_BI_PERANCANGAN",
+        kewangan: "https://drive.google.com/drive/folders/BBB_BI_KEWANGAN",
+      },
       // add the rest as needed (same structure)
       ba: {}, bkd: {}, mt: {}, mt2: {}, sc: {}, ict: {}, sej: {}, geo: {}, pi: {}, pn: {}, rbt: {}, pvma: {}, rek: {}, tvet2: {}
     };
