--- a/akademik.html
+++ b/akademik.html
@@ -953,14 +953,14 @@
       },
             ba: {
         pengurusan: "https://drive.google.com/drive/folders/1JOgzqG1g0-p2vjfhW5bsej9FWOBnW0h9?usp=drive_link",
-        pekeliling: "https://drive.google.com/drive/folders/BBB_BI_PEKELILING",
-        mesyuarat: "https://drive.google.com/drive/folders/1EXBic7wE77d6B39vAV5TCOCc6x0vo2hL?usp=sharingT",
-        pentaksiran: "https://drive.google.com/drive/folders/BBB_BI_PENTAKSIRAN",
-        perancangan: "https://drive.google.com/drive/folders/BBB_BI_PERANCANGAN",
-        kewangan: "https://drive.google.com/drive/folders/BBB_BI_KEWANGAN",
+        pekeliling: "https://drive.google.com/drive/folders/1AcYNdagBZ3hcNF86LorS9zFMQrdLJZJD?usp=drive_link",
+        mesyuarat: "https://drive.google.com/drive/folders/1EXBic7wE77d6B39vAV5TCOCc6x0vo2hL?usp=drive_link",
+        pentaksiran: "https://drive.google.com/drive/folders/1Ns8lr2lSoKLsih6ghzvG-PGkm1cwL0gd?usp=drive_link",
+        perancangan: "https://drive.google.com/drive/folders/1BQm8Dp-Z51eeB-KZn1KOlcMXJi1zPV1X?usp=drive_link",
+        kewangan: "https://drive.google.com/drive/folders/1_5USgbdVxFs1kYx3JhXF4isgKMhQz4OC?usp=drive_link",
       },
       // add the rest as needed (same structure)
-      ba: {}, bkd: {}, mt: {}, mt2: {}, sc: {}, ict: {}, sej: {}, geo: {}, pi: {}, pn: {}, rbt: {}, pvma: {}, rek: {}, tvet2: {}
+      bkd: {}, mt: {}, mt2: {}, sc: {}, ict: {}, sej: {}, geo: {}, pi: {}, pn: {}, rbt: {}, pvma: {}, rek: {}, tvet2: {}
     };
 
     const badgeText = document.getElementById("badgeText");
