--- a/akademik.html
+++ b/akademik.html
@@ -918,6 +918,7 @@
       bm: "Bahasa Melayu",
       bi: "Bahasa Inggeris",
       ba: "Bahasa Arab",
+      km: "Kesusteraan Melayu",
       bkd: "BKD",
       mt: "Matematik",
       mt2: "Matematik Tambahan",
@@ -958,6 +959,14 @@
         pentaksiran: "https://drive.google.com/drive/folders/1Ns8lr2lSoKLsih6ghzvG-PGkm1cwL0gd?usp=drive_link",
         perancangan: "https://drive.google.com/drive/folders/1BQm8Dp-Z51eeB-KZn1KOlcMXJi1zPV1X?usp=drive_link",
         kewangan: "https://drive.google.com/drive/folders/1_5USgbdVxFs1kYx3JhXF4isgKMhQz4OC?usp=drive_link",
+      },
+            km: {
+        pengurusan: "https://drive.google.com/drive/folders/1t20DcE4jbZy_pxcCtmD9yL2KVYqFl3tV?usp=drive_link",
+        pekeliling: "https://drive.google.com/drive/folders/1jI3wDyqS6JDzGOZDKSsZdn44n9eyq663?usp=drive_link",
+        mesyuarat: "https://drive.google.com/drive/folders/1ApIJltOXhWFY417iWnR8ZsgIwLpCkhew?usp=drive_link",
+        pentaksiran: "https://drive.google.com/drive/folders/1xBPqe8QbnIpZz0cSVmv2iplHNiSb5WJt?usp=drive_link",
+        perancangan: "https://drive.google.com/drive/folders/1FzcU2SsNaEe-fQ_lmHnTpwfL44cLf4iF?usp=drive_link",
+        kewangan: "https://drive.google.com/drive/folders/1hrHY1dR1es2jYS1JZhfr9PZjZI_NY24t?usp=drive_link",
       },
       // add the rest as needed (same structure)
       bkd: {}, mt: {}, mt2: {}, sc: {}, ict: {}, sej: {}, geo: {}, pi: {}, pn: {}, rbt: {}, pvma: {}, rek: {}, tvet2: {}
