--- a/akademik.html
+++ b/akademik.html
@@ -652,7 +652,7 @@
                     <a class="pill" href="#" data-subject="bm"><span class="pillDot"></span>Bahasa Melayu</a>
                     <a class="pill" href="#" data-subject="bi"><span class="pillDot"></span>Bahasa Inggeris</a>
                     <a class="pill" href="#" data-subject="ba"><span class="pillDot"></span>Bahasa Arab</a>
-                    <a class="pill" href="#" data-subject="bkd"><span class="pillDot"></span>Kesusteraan Melayu</a>
+                    <a class="pill" href="#" data-subject="km"><span class="pillDot"></span>Kesusteraan Melayu</a>
                     <a class="pill" href="#" data-subject="bkd"><span class="pillDot"></span>BKD</a>
                   </div>
                 </div>
