--- a/akademik.html
+++ b/akademik.html
@@ -968,6 +968,22 @@
         perancangan: "https://drive.google.com/drive/folders/1FzcU2SsNaEe-fQ_lmHnTpwfL44cLf4iF?usp=drive_link",
         kewangan: "https://drive.google.com/drive/folders/1hrHY1dR1es2jYS1JZhfr9PZjZI_NY24t?usp=drive_link",
       },
+            bkd: {
+        pengurusan: "https://drive.google.com/drive/folders/1kS4aapz5aNwRTghC5NhFsyWMxvfna2Xx?usp=drive_link",
+        pekeliling: "https://drive.google.com/drive/folders/19pWW5GhLez80Lh2Ae6Ov42s8M9kMguRg?usp=drive_link",
+        mesyuarat: "https://drive.google.com/drive/folders/1hUUuUFf6a7fIVL-Xpp4bKi2msIVmia_c?usp=drive_link",
+        pentaksiran: "https://drive.google.com/drive/folders/1KIubcnvTDVMaGCeK8GqhBUUwPfTmnVmc?usp=drive_link",
+        perancangan: "https://drive.google.com/drive/folders/1OxP_448r4ROCwhC5o27ISoaHQ5InQqAf?usp=drive_link",
+        kewangan: "https://drive.google.com/drive/folders/1NGupwPHBMc4HYHIVrGkq-Bfv9Hty2s4w?usp=drive_link",
+      },
+            mt: {
+        pengurusan: "",
+        pekeliling: "",
+        mesyuarat: "",
+        pentaksiran: "",
+        perancangan: "",
+        kewangan: "",
+      },
       // add the rest as needed (same structure)
       bkd: {}, mt: {}, mt2: {}, sc: {}, ict: {}, sej: {}, geo: {}, pi: {}, pn: {}, rbt: {}, pvma: {}, rek: {}, tvet2: {}
     };
