--- a/akademik.html
+++ b/akademik.html
@@ -977,12 +977,12 @@
         kewangan: "https://drive.google.com/drive/folders/1NGupwPHBMc4HYHIVrGkq-Bfv9Hty2s4w?usp=drive_link",
       },
             mt: {
-        pengurusan: "",
-        pekeliling: "",
-        mesyuarat: "",
-        pentaksiran: "",
-        perancangan: "",
-        kewangan: "",
+        pengurusan: "https://drive.google.com/drive/folders/1TnRcgg2BFhUDJc54gVardi1pWRJfhUfQ?usp=drive_link",
+        pekeliling: "https://drive.google.com/drive/folders/1X66O0AUonabuhDDp1yQarw8LBrpMCdtE?usp=drive_link",
+        mesyuarat: "https://drive.google.com/drive/folders/1D7JaE3sIeE6wTYWsz0QLH9BGPo3I2-MX?usp=drive_link",
+        pentaksiran: "https://drive.google.com/drive/folders/1KUa7BwV9NoNuR0BmrguNE4b-aZE3rB1W?usp=drive_link",
+        perancangan: "https://drive.google.com/drive/folders/1qEOq9vH9NgwLqvOFyzTGXn-afph1jMOH?usp=drive_link",
+        kewangan: "https://drive.google.com/drive/folders/1NQHWVW1vgd_wdA06O-n_bWWXqtREe7jo?usp=drive_link",
       },
       // add the rest as needed (same structure)
       bkd: {}, mt: {}, mt2: {}, sc: {}, ict: {}, sej: {}, geo: {}, pi: {}, pn: {}, rbt: {}, pvma: {}, rek: {}, tvet2: {}
