--- a/akademik.html
+++ b/akademik.html
@@ -985,7 +985,7 @@
         kewangan: "https://drive.google.com/drive/folders/1NQHWVW1vgd_wdA06O-n_bWWXqtREe7jo?usp=drive_link",
       },
       // add the rest as needed (same structure)
-      bkd: {}, mt: {}, mt2: {}, sc: {}, ict: {}, sej: {}, geo: {}, pi: {}, pn: {}, rbt: {}, pvma: {}, rek: {}, tvet2: {}
+      mt2: {}, sc: {}, ict: {}, sej: {}, geo: {}, pi: {}, pn: {}, rbt: {}, pvma: {}, rek: {}, tvet2: {}
     };
 
     const badgeText = document.getElementById("badgeText");
