--- a/akademik.html
+++ b/akademik.html
@@ -921,6 +921,10 @@
       km: "Kesusteraan Melayu",
       bkd: "BKD",
       mt: "Matematik",
+      sc: "Sains",
+      bio: "Biologi",
+      fiz: "Fizik",
+      kim: "Kimia",
       mt2: "Matematik Tambahan",
       sc: "Sains",
       ict: "TMK / ICT",
@@ -952,7 +956,7 @@
         perancangan: "https://drive.google.com/drive/folders/BBB_BI_PERANCANGAN",
         kewangan: "https://drive.google.com/drive/folders/BBB_BI_KEWANGAN",
       },
-            ba: {
+      ba: {
         pengurusan: "https://drive.google.com/drive/folders/1JOgzqG1g0-p2vjfhW5bsej9FWOBnW0h9?usp=drive_link",
         pekeliling: "https://drive.google.com/drive/folders/1AcYNdagBZ3hcNF86LorS9zFMQrdLJZJD?usp=drive_link",
         mesyuarat: "https://drive.google.com/drive/folders/1EXBic7wE77d6B39vAV5TCOCc6x0vo2hL?usp=drive_link",
@@ -960,7 +964,7 @@
         perancangan: "https://drive.google.com/drive/folders/1BQm8Dp-Z51eeB-KZn1KOlcMXJi1zPV1X?usp=drive_link",
         kewangan: "https://drive.google.com/drive/folders/1_5USgbdVxFs1kYx3JhXF4isgKMhQz4OC?usp=drive_link",
       },
-            km: {
+      km: {
         pengurusan: "https://drive.google.com/drive/folders/1t20DcE4jbZy_pxcCtmD9yL2KVYqFl3tV?usp=drive_link",
         pekeliling: "https://drive.google.com/drive/folders/1jI3wDyqS6JDzGOZDKSsZdn44n9eyq663?usp=drive_link",
         mesyuarat: "https://drive.google.com/drive/folders/1ApIJltOXhWFY417iWnR8ZsgIwLpCkhew?usp=drive_link",
@@ -968,7 +972,7 @@
         perancangan: "https://drive.google.com/drive/folders/1FzcU2SsNaEe-fQ_lmHnTpwfL44cLf4iF?usp=drive_link",
         kewangan: "https://drive.google.com/drive/folders/1hrHY1dR1es2jYS1JZhfr9PZjZI_NY24t?usp=drive_link",
       },
-            bkd: {
+      bkd: {
         pengurusan: "https://drive.google.com/drive/folders/1kS4aapz5aNwRTghC5NhFsyWMxvfna2Xx?usp=drive_link",
         pekeliling: "https://drive.google.com/drive/folders/19pWW5GhLez80Lh2Ae6Ov42s8M9kMguRg?usp=drive_link",
         mesyuarat: "https://drive.google.com/drive/folders/1hUUuUFf6a7fIVL-Xpp4bKi2msIVmia_c?usp=drive_link",
@@ -976,7 +980,7 @@
         perancangan: "https://drive.google.com/drive/folders/1OxP_448r4ROCwhC5o27ISoaHQ5InQqAf?usp=drive_link",
         kewangan: "https://drive.google.com/drive/folders/1NGupwPHBMc4HYHIVrGkq-Bfv9Hty2s4w?usp=drive_link",
       },
-            mt: {
+      mt: {
         pengurusan: "https://drive.google.com/drive/folders/1TnRcgg2BFhUDJc54gVardi1pWRJfhUfQ?usp=drive_link",
         pekeliling: "https://drive.google.com/drive/folders/1X66O0AUonabuhDDp1yQarw8LBrpMCdtE?usp=drive_link",
         mesyuarat: "https://drive.google.com/drive/folders/1D7JaE3sIeE6wTYWsz0QLH9BGPo3I2-MX?usp=drive_link",
@@ -984,8 +988,24 @@
         perancangan: "https://drive.google.com/drive/folders/1qEOq9vH9NgwLqvOFyzTGXn-afph1jMOH?usp=drive_link",
         kewangan: "https://drive.google.com/drive/folders/1NQHWVW1vgd_wdA06O-n_bWWXqtREe7jo?usp=drive_link",
       },
+      sc: {
+        pengurusan: "https://drive.google.com/drive/folders/1z8QO3kvXUalvxdaM3TF1t_QGVsiv9Kx3?usp=drive_link",
+        pekeliling: "https://drive.google.com/drive/folders/1zq3ZOMBd2YhMidwehJ6q_8pe2glnTSQT?usp=drive_link",
+        mesyuarat: "https://drive.google.com/drive/folders/1Rr6AT-BUy1jNgjOOuxxIl4T63ZA-8taw?usp=drive_link",
+        pentaksiran: "https://drive.google.com/drive/folders/1mrIJRKPLFZqM5BXJwr-waOWo8TO_Tv1W?usp=drive_link",
+        perancangan: "https://drive.google.com/drive/folders/1RQdUJgHP9PoOHlA052TQphgyzHhi87KM?usp=drive_link",
+        kewangan: "https://drive.google.com/drive/folders/15YQj6-QyGGsuFQ8BFNDCl6pb37Qfh2p3?usp=drive_link",
+      },
+      bio: {
+        pengurusan: "",
+        pekeliling: "",
+        mesyuarat: "",
+        pentaksiran: "",
+        perancangan: "",
+        kewangan: "",
+      },
       // add the rest as needed (same structure)
-      mt2: {}, sc: {}, ict: {}, sej: {}, geo: {}, pi: {}, pn: {}, rbt: {}, pvma: {}, rek: {}, tvet2: {}
+      sc: {}, ict: {}, sej: {}, geo: {}, pi: {}, pn: {}, rbt: {}, pvma: {}, rek: {}, tvet2: {}
     };
 
     const badgeText = document.getElementById("badgeText");
