--- a/akademik.html
+++ b/akademik.html
@@ -686,6 +686,7 @@
                   <div class="pillRow">
                     <a class="pill" href="#" data-subject="sej"><span class="pillDot"></span>Sejarah</a>
                     <a class="pill" href="#" data-subject="geo"><span class="pillDot"></span>Geografi</a>
+                    <a class="pill" href="#" data-subject="pi"><span class="pillDot"></span>Pendidikan Islam</a>
                     <a class="pill" href="#" data-subject="pi"><span class="pillDot"></span>Pendidikan Moral</a>
                     <a class="pill" href="#" data-subject="pn"><span class="pillDot"></span>Pendidikan Seni Visual</a>
                     <a class="pill" href="#" data-subject="pn"><span class="pillDot"></span>PJPK</a>
@@ -702,7 +703,7 @@
                 </button>
                 <div class="bBody">
                   <div class="pillRow">
-                    <a class="pill" href="#" data-subject="rbt"><span class="pillDot"></span>Pertanina</a>
+                    <a class="pill" href="#" data-subject="rbt"><span class="pillDot"></span>Pertaian</a>
                     <a class="pill" href="#" data-subject="pvma"><span class="pillDot"></span>Perniagaan</a>
                     <a class="pill" href="#" data-subject="rek"><span class="pillDot"></span>Ekonomi</a>
                     <a class="pill" href="#" data-subject="tvet2"><span class="pillDot"></span>Asas Kelestarian</a>
@@ -926,7 +927,7 @@
       fiz: "Fizik",
       kim: "Kimia",
       mt2: "Matematik Tambahan",
-      sc: "Sains",
+      sej: "Sejarah",
       ict: "TMK / ICT",
       sej: "Sejarah",
       geo: "Geografi",
@@ -997,6 +998,38 @@
         kewangan: "https://drive.google.com/drive/folders/15YQj6-QyGGsuFQ8BFNDCl6pb37Qfh2p3?usp=drive_link",
       },
       bio: {
+        pengurusan: "https://drive.google.com/drive/folders/1eNksELZJK-_5wEFr1CLOKW4tBo5iRkUH?usp=drive_link",
+        pekeliling: "https://drive.google.com/drive/folders/1pEBv7ic4XYta4wvrvXpixrjzXjbgjsfa?usp=drive_link",
+        mesyuarat: "https://drive.google.com/drive/folders/1vOhVPkBYGsr_S3bv53iJwcX8NNEbSJ3G?usp=drive_link",
+        pentaksiran: "https://drive.google.com/drive/folders/1U0J0o7yjmmOcvSqMNfoxFza-mPeumHEH?usp=drive_link",
+        perancangan: "https://drive.google.com/drive/folders/1RlB4JqERbNShD5kz9Y0THXnBRehIX0XA?usp=drive_link",
+        kewangan: "https://drive.google.com/drive/folders/1lx1J9c0EGxeMvz8E1q-TISgtkrcg4J2O?usp=drive_link",
+      },
+      fiz: {
+        pengurusan: "https://drive.google.com/drive/folders/18Icqi_gFyJAc7wsLU7KP7IDlYoLt_wb8?usp=drive_link",
+        pekeliling: "https://drive.google.com/drive/folders/1ohYLXQwP5GMic_QaJMHn1WZnYu2oPBCO?usp=drive_link",
+        mesyuarat: "https://drive.google.com/drive/folders/1XJClmeOARQzo9WL_L99Eg6N-drV6vrP5?usp=drive_link",
+        pentaksiran: "https://drive.google.com/drive/folders/1ilX-Webh6UHqRDTM-2BhKreg2ghHrk-m?usp=drive_link",
+        perancangan: "https://drive.google.com/drive/folders/1zBvw2he5LjLZZT_eGVxPh0tT5wPKaCG0?usp=drive_link",
+        kewangan: "https://drive.google.com/drive/folders/15ITYRv0AmbnnuVg7t9bEaBcBe4hFKrrK?usp=drive_link",
+      },
+      kim: {
+        pengurusan: "https://drive.google.com/drive/folders/1pvmBEmbnQpYgzVgfFEGPmF2uOHDtOjbS?usp=drive_link",
+        pekeliling: "https://drive.google.com/drive/folders/1YKc73pL3n_OWET4SJ5VqzBAqwjVOuPbZ?usp=drive_link",
+        mesyuarat: "https://drive.google.com/drive/folders/1PvR6ZO1Ri76uC5otosHCvt7jZ4vKo7yt?usp=drive_link",
+        pentaksiran: "https://drive.google.com/drive/folders/10Pmrh5iAWuQV7mwAnnYojZihpZvxqNQA?usp=drive_link",
+        perancangan: "https://drive.google.com/drive/folders/1XdMEjZsBfNr9fGwHYjs-m5EoRm4OSBz-?usp=drive_link",
+        kewangan: "https://drive.google.com/drive/folders/14k34mwkrXiIBh8uix6cRmP7uIAT-V4R-?usp=drive_link",
+      },
+      mt2: {
+        pengurusan: "https://drive.google.com/drive/folders/1Ny7tO0fhq78T8SaFo7vx13xEVrx05aBF?usp=drive_link",
+        pekeliling: "https://drive.google.com/drive/folders/1RtS0I1q4llwF-QR51ZZV8pRvgjQNxIAy?usp=drive_link",
+        mesyuarat: "https://drive.google.com/drive/folders/1f1i3Z0PGJEHdRbcoSXOjlWtDLpqfsjwB?usp=drive_link",
+        pentaksiran: "https://drive.google.com/drive/folders/1FaZfiFNcRiZb8ikVgMdyll_RDslMD3HZ?usp=drive_link",
+        perancangan: "https://drive.google.com/drive/folders/19zsEm-5DrCPzIOyx_z5yVSy0eQiIsyNG?usp=drive_link",
+        kewangan: "https://drive.google.com/drive/folders/1xyFJEP7fAectz62pPdXemyx6I0tZZen7?usp=drive_link",
+      },
+      sej: {
         pengurusan: "",
         pekeliling: "",
         mesyuarat: "",
@@ -1005,7 +1038,7 @@
         kewangan: "",
       },
       // add the rest as needed (same structure)
-      sc: {}, ict: {}, sej: {}, geo: {}, pi: {}, pn: {}, rbt: {}, pvma: {}, rek: {}, tvet2: {}
+      ict: {}, sej: {}, geo: {}, pi: {}, pn: {}, rbt: {}, pvma: {}, rek: {}, tvet2: {}
     };
 
     const badgeText = document.getElementById("badgeText");
