--- a/akademik.html
+++ b/akademik.html
@@ -668,9 +668,9 @@
                   <div class="pillRow">
                     <a class="pill" href="#" data-subject="mt"><span class="pillDot"></span>Matematik</a>
                     <a class="pill" href="#" data-subject="sc"><span class="pillDot"></span>Sains</a>
-                    <a class="pill" href="#" data-subject="ict"><span class="pillDot"></span>Biologi</a>
-                    <a class="pill" href="#" data-subject="ict"><span class="pillDot"></span>Fizik</a>
-                    <a class="pill" href="#" data-subject="ict"><span class="pillDot"></span>Kimia</a>
+                    <a class="pill" href="#" data-subject="bio"><span class="pillDot"></span>Biologi</a>
+                    <a class="pill" href="#" data-subject="fiz"><span class="pillDot"></span>Fizik</a>
+                    <a class="pill" href="#" data-subject="kim"><span class="pillDot"></span>Kimia</a>
                     <a class="pill" href="#" data-subject="mt2"><span class="pillDot"></span>Matematik Tambahan</a>
                   </div>
                 </div>
@@ -686,11 +686,11 @@
                   <div class="pillRow">
                     <a class="pill" href="#" data-subject="sej"><span class="pillDot"></span>Sejarah</a>
                     <a class="pill" href="#" data-subject="geo"><span class="pillDot"></span>Geografi</a>
-                    <a class="pill" href="#" data-subject="pi"><span class="pillDot"></span>Pendidikan Islam</a>
-                    <a class="pill" href="#" data-subject="pi"><span class="pillDot"></span>Pendidikan Moral</a>
-                    <a class="pill" href="#" data-subject="pn"><span class="pillDot"></span>Pendidikan Seni Visual</a>
-                    <a class="pill" href="#" data-subject="pn"><span class="pillDot"></span>PJPK</a>
-                    <a class="pill" href="#" data-subject="pn"><span class="pillDot"></span>Sains Sukan</a>
+                    <a class="pill" href="#" data-subject="pai"><span class="pillDot"></span>Pendidikan Islam</a>
+                    <a class="pill" href="#" data-subject="pm"><span class="pillDot"></span>Pendidikan Moral</a>
+                    <a class="pill" href="#" data-subject="psv"><span class="pillDot"></span>Pendidikan Seni Visual</a>
+                    <a class="pill" href="#" data-subject="pjpk"><span class="pillDot"></span>PJPK</a>
+                    <a class="pill" href="#" data-subject="ss"><span class="pillDot"></span>Sains Sukan</a>
                   </div>
                 </div>
               </div>
@@ -703,13 +703,13 @@
                 </button>
                 <div class="bBody">
                   <div class="pillRow">
-                    <a class="pill" href="#" data-subject="rbt"><span class="pillDot"></span>Pertaian</a>
-                    <a class="pill" href="#" data-subject="pvma"><span class="pillDot"></span>Perniagaan</a>
-                    <a class="pill" href="#" data-subject="rek"><span class="pillDot"></span>Ekonomi</a>
-                    <a class="pill" href="#" data-subject="tvet2"><span class="pillDot"></span>Asas Kelestarian</a>
-                    <a class="pill" href="#" data-subject="rek"><span class="pillDot"></span>Katering dan Penyajian</a>
-                    <a class="pill" href="#" data-subject="tvet2"><span class="pillDot"></span>Landskap dan Nursery</a>
-                    <a class="pill" href="#" data-subject="tvet2"><span class="pillDot"></span>Reka Bentuk Teknologi</a>
+                    <a class="pill" href="#" data-subject="prt"><span class="pillDot"></span>Pertanian</a>
+                    <a class="pill" href="#" data-subject="per"><span class="pillDot"></span>Perniagaan</a>
+                    <a class="pill" href="#" data-subject="eko"><span class="pillDot"></span>Ekonomi</a>
+                    <a class="pill" href="#" data-subject="akl"><span class="pillDot"></span>Asas Kelestarian</a>
+                    <a class="pill" href="#" data-subject="kdp"><span class="pillDot"></span>Katering dan Penyajian</a>
+                    <a class="pill" href="#" data-subject="ldn"><span class="pillDot"></span>Landskap dan Nursery</a>
+                    <a class="pill" href="#" data-subject="rbt"><span class="pillDot"></span>RBT</a>
                   </div>
                 </div>
               </div>
@@ -928,15 +928,18 @@
       kim: "Kimia",
       mt2: "Matematik Tambahan",
       sej: "Sejarah",
-      ict: "TMK / ICT",
-      sej: "Sejarah",
       geo: "Geografi",
-      pi: "Pendidikan Islam",
-      pn: "Perniagaan",
+      pai: "Pendidikan Agama Islam",
+      pm: "Pendidikan Moral",
+      psv: "Pendidikan Seni Visual",
+      pjpk: "PJPK",
+      ss: "Sains Sukan",
+      prt: "Pertanian",
+      per: "Perniagaan",
+      eko: "Ekonomi",
+      ak: "Asas Kelasterian",
+      ldn: "Landskap dan Nursery",
       rbt: "RBT",
-      pvma: "PVMA",
-      rek: "Reka Cipta",
-      tvet2: "Modul TVET"
     };
 
     // Replace these placeholder URLs with your real Google Drive folder/file links.
@@ -1030,7 +1033,31 @@
         kewangan: "https://drive.google.com/drive/folders/1xyFJEP7fAectz62pPdXemyx6I0tZZen7?usp=drive_link",
       },
       sej: {
-        pengurusan: "",
+        pengurusan: "https://drive.google.com/drive/folders/1KTel9kiZDhe0ouCdivVazxoHt7MC9poW?usp=drive_link",
+        pekeliling: "https://drive.google.com/drive/folders/1pVURiDmgkBJau5DK0vm9EPkYXJP5x8ji?usp=drive_link",
+        mesyuarat: "https://drive.google.com/drive/folders/1EBEpOm0Ob-QteA0OwOig_FJMP4Jk8dfK?usp=drive_link",
+        pentaksiran: "https://drive.google.com/drive/folders/1Y-W7MmpU3cZnwuY1razNwYDb1_MSDcPb?usp=drive_link",
+        perancangan: "https://drive.google.com/drive/folders/1_HE6H7NcxP5LmTyzUcX_j6sRnZbTCR70?usp=drive_link",
+        kewangan: "https://drive.google.com/drive/folders/1hBSMFD6TH5mqxwdjWjKIgRHSry7QQ2Wl?usp=drive_link",
+      },
+      geo: {
+        pengurusan: "https://drive.google.com/drive/folders/17f0dewjc-0eqg0VxyjdYz9GI0_uE0lk-?usp=drive_link",
+        pekeliling: "https://drive.google.com/drive/folders/1u_lTAWcBaaaFYtpddOLu4bFlROlp2ari?usp=drive_link",
+        mesyuarat: "https://drive.google.com/drive/folders/1BXXHZNU4DOLg2Tf-qSh8zT1UlQRKIVqj?usp=drive_link",
+        pentaksiran: "https://drive.google.com/drive/folders/1UbiWlTd9FkaCgD8X2pL8Ist6_p_kDnY3?usp=drive_link",
+        perancangan: "https://drive.google.com/drive/folders/162UVv1rfHfd794jT_aiJXTMmbwR4raLq?usp=drive_link",
+        kewangan: "https://drive.google.com/drive/folders/1gH5FokfV1BzNmX0q0Lrn2mjlLtwldwPE?usp=drive_link",
+      },
+      pai: {
+        pengurusan: "https://drive.google.com/drive/folders/12LMEF7c4YCDYhdGR4ehrO50BzfoQPiKc?usp=drive_link",
+        pekeliling: "https://drive.google.com/drive/folders/1t4HB22JzxXvIgvbGGdNJJsd6wsOLmXAj?usp=drive_link",
+        mesyuarat: "https://drive.google.com/drive/folders/1MdQSyZomeDOjskYepTeb_hiJQpmZIWbH?usp=drive_link",
+        pentaksiran: "https://drive.google.com/drive/folders/1vPOCsrnziJH_IoV3XlC7xY4Er4d7JY5L?usp=drive_link",
+        perancangan: "https://drive.google.com/drive/folders/1lG_eF6yGQ-oOdg964XnLTBWw49Gw_fNO?usp=drive_link",
+        kewangan: "https://drive.google.com/drive/folders/1N-jq63AukTbwwyo3rfc3Cy97EunR1aiG?usp=drive_link",
+      },
+      pm: {
+        pengurusan: "https://drive.google.com/drive/folders/15QI9KmpF4GcATxmZ9l-K7oObMOV39Ce2?usp=drive_link",
         pekeliling: "",
         mesyuarat: "",
         pentaksiran: "",
