--- a/akademik.html
+++ b/akademik.html
@@ -953,12 +953,12 @@
         kewangan: "https://drive.google.com/drive/folders/19AwsEnKQlmcjwFmolZWPD6BxEiz-s99d?usp=sharing",
       },
       bi: {
-        pengurusan: "https://drive.google.com/drive/folders/16QLCfvzaeglZf9xEAfOq63zyvuAhHOoS?usp=drive_link",
-        pekeliling: "https://drive.google.com/drive/folders/BBB_BI_PEKELILING",
-        mesyuarat: "https://drive.google.com/drive/folders/BBB_BI_MESYUARAT",
-        pentaksiran: "https://drive.google.com/drive/folders/BBB_BI_PENTAKSIRAN",
-        perancangan: "https://drive.google.com/drive/folders/BBB_BI_PERANCANGAN",
-        kewangan: "https://drive.google.com/drive/folders/BBB_BI_KEWANGAN",
+        pengurusan: "https://drive.google.com/drive/folders/1Jrzf9XJkqUuITL6uqj85z_IjDKV9LHJR?usp=drive_link",
+        pekeliling: "https://drive.google.com/drive/folders/1EBQ6Nv86eNIwu_icHrNo-Yex0RTFVMel?usp=drive_link",
+        mesyuarat: "https://drive.google.com/drive/folders/1XR-HA_oAuI8or8ugF4klvc5ebN2-JJdy?usp=drive_link",
+        pentaksiran: "https://drive.google.com/drive/folders/1MjaF8yTgDCViCoAYDdkA3xV-_ez2HITC?usp=drive_link",
+        perancangan: "https://drive.google.com/drive/folders/1ixR7lbf0Y_5XEFhl4jhy0Eh4ioY5w0AJ?usp=drive_link",
+        kewangan: "https://drive.google.com/drive/folders/1ChosK1WBFnxj7SPL4Gz6_ZDj8Ap6P-Bp?usp=drive_link",
       },
       ba: {
         pengurusan: "https://drive.google.com/drive/folders/1JOgzqG1g0-p2vjfhW5bsej9FWOBnW0h9?usp=drive_link",
@@ -1065,7 +1065,7 @@
         kewangan: "",
       },
       // add the rest as needed (same structure)
-      ict: {}, sej: {}, geo: {}, pi: {}, pn: {}, rbt: {}, pvma: {}, rek: {}, tvet2: {}
+      pn: {}, rbt: {}, pvma: {}, rek: {}, tvet2: {}
     };
 
     const badgeText = document.getElementById("badgeText");
