--- a/akademik.html
+++ b/akademik.html
@@ -937,7 +937,7 @@
       prt: "Pertanian",
       per: "Perniagaan",
       eko: "Ekonomi",
-      ak: "Asas Kelasterian",
+      ak: "Asas Kelastarian",
       ldn: "Landskap dan Nursery",
       rbt: "RBT",
     };
@@ -1058,15 +1058,92 @@
       },
       pm: {
         pengurusan: "https://drive.google.com/drive/folders/15QI9KmpF4GcATxmZ9l-K7oObMOV39Ce2?usp=drive_link",
-        pekeliling: "",
-        mesyuarat: "",
-        pentaksiran: "",
-        perancangan: "",
-        kewangan: "",
+        pekeliling: "https://drive.google.com/drive/folders/1APwoDhf5k3bkS-DJJyuZwaaGOYjavmTI?usp=drive_link",
+        mesyuarat: "https://drive.google.com/drive/folders/1V1lVscIZcoDD5iBlGyRiYmSaWTdpYaZ5?usp=drive_link",
+        pentaksiran: "https://drive.google.com/drive/folders/108Bsqo4U25cjXkRgM_N9wpwlQ2KkxbaB?usp=drive_link",
+        perancangan: "https://drive.google.com/drive/folders/1VpcTDnQ-W16D6sy1Q1W_22j2JYT5vjuW?usp=drive_link",
+        kewangan: "https://drive.google.com/drive/folders/1h8Nnm6xRI9w0pXp1yAbCU-uWEcDb4vcN?usp=drive_link",
       },
-      // add the rest as needed (same structure)
-      pn: {}, rbt: {}, pvma: {}, rek: {}, tvet2: {}
-    };
+      psv: {
+        pengurusan: "https://drive.google.com/drive/folders/1FzhRwZlg6W_oSkzp5gkHPfehZ8mKR-2-?usp=drive_link",
+        pekeliling: "https://drive.google.com/drive/folders/1galR46m5FPfB9N4fU2jTFsA51Old-xLa?usp=drive_link",
+        mesyuarat: "https://drive.google.com/drive/folders/1C5ME9dujyawSo3Y-iPNAfi4rk8mm9_Wf?usp=drive_link",
+        pentaksiran: "https://drive.google.com/drive/folders/1KVTBQVcnVtSgLlrBFSekvo_49XGjJ6Q_?usp=drive_link",
+        perancangan: "https://drive.google.com/drive/folders/1HU4x52CiLPMDT6bkWdlRcfPEG0Q1QNcY?usp=drive_link",
+        kewangan: "https://drive.google.com/drive/folders/1Czq2w2491N7jpAlkhDXsacKZqaOnOwqa?usp=drive_link",
+      },
+      pjpk: {
+        pengurusan: "https://drive.google.com/drive/folders/13npKMymjni_PdXKcea0vPdCqrpr441Ww?usp=drive_link",
+        pekeliling: "https://drive.google.com/drive/folders/1Dt-Tz1MK-DntW67sazPdvmREJZwwWBYW?usp=drive_link",
+        mesyuarat: "https://drive.google.com/drive/folders/1EN3Ua0TH4DSBhKpjqb3TE5sIKjcD67Ns?usp=drive_link",
+        pentaksiran: "https://drive.google.com/drive/folders/12RhN87702DFqBwEnOJV_RRMzccuq5syS?usp=drive_link",
+        perancangan: "https://drive.google.com/drive/folders/13KZmpFYYHNXqOHmxrfK-pepkqMDPaOSJ?usp=drive_link",
+        kewangan: "https://drive.google.com/drive/folders/15IzUjI88DXRaThDRiX--zdkjjB0DDF0-?usp=drive_link",
+      },
+      ss: {
+        pengurusan: "https://drive.google.com/drive/folders/1jdj_uZ83RGZiKTwm-FCOc9MPDsI206qc?usp=drive_link",
+        pekeliling: "https://drive.google.com/drive/folders/1Q7Vj5q0unWY9EljkRFw5ukgVbURPkA_8?usp=drive_link",
+        mesyuarat: "https://drive.google.com/drive/folders/1ICuqkMkdh5gtAgWHZUesRSqVxlAWIVky?usp=drive_link",
+        pentaksiran: "https://drive.google.com/drive/folders/1G8LC1nKOOc7mZwcdRmEBe7Epzr32nMTa?usp=drive_link",
+        perancangan: "https://drive.google.com/drive/folders/10aLrVw5Xrpi4WoB3sJxBlsYq4lGqkesW?usp=drive_link",
+        kewangan: "https://drive.google.com/drive/folders/16pNyRBWCbggWbSGolFMyESxvVi3UnUmr?usp=drive_link",
+      },
+      prt: {
+        pengurusan: "https://drive.google.com/drive/folders/1oMNIBSvSA4G_9aVRffcaNPbq0wN-9Skd?usp=drive_link",
+        pekeliling: "https://drive.google.com/drive/folders/17pArf7jJ6BxYyJ97NvjghdGvIMKE1TH7?usp=drive_link",
+        mesyuarat: "https://drive.google.com/drive/folders/1RV129OOnUsf78HfOeDVvoF3B9ZfB_SBj?usp=drive_link",
+        pentaksiran: "https://drive.google.com/drive/folders/1sGPfZOh5lwYP4Nmh6PVOuv0f2g8KntbB?usp=drive_link",
+        perancangan: "https://drive.google.com/drive/folders/1iPRoPJthj7stdKPOaWpS_SW6PNR1K94X?usp=drive_link",
+        kewangan: "https://drive.google.com/drive/folders/1H-ka9gQdyRWjq0D3_WawHsxhDjvd3Ede?usp=drive_link",
+      },
+      per: {
+        pengurusan: "https://drive.google.com/drive/folders/1nrJaevWG1vQwrj9O0-2Lod2POwDp9MG2?usp=drive_link",
+        pekeliling: "https://drive.google.com/drive/folders/1o0sjwn_JWz2vjiQO1jy7CDSHZURQhcvg?usp=drive_link",
+        mesyuarat: "https://drive.google.com/drive/folders/1D0fAozAO1y5AViyskuSj_drGFjUpQAaf?usp=drive_link",
+        pentaksiran: "https://drive.google.com/drive/folders/1mIavIjJHfWH4sBohUcfBJ41LBJV3qviz?usp=drive_link",
+        perancangan: "https://drive.google.com/drive/folders/1cL1KTh4v6lt1KCeR3RLdeBInB61rBD3E?usp=drive_link",
+        kewangan: "https://drive.google.com/drive/folders/1pQKxckJ0EF5BU338mbNzeBfDXnkzyIKk?usp=drive_link",
+      },
+      eko: {
+        pengurusan: "https://drive.google.com/drive/folders/15a4j0XLrNB7jKQEjEPoZ-aBIrRpPMW8v?usp=drive_link",
+        pekeliling: "https://drive.google.com/drive/folders/1Xr7XP0FFg6ofmt-6whLZ__Yhj7WqD8pr?usp=drive_link",
+        mesyuarat: "https://drive.google.com/drive/folders/1TdQ8pM43ZvAAKvEMcRD-jqxsZr4jKRqI?usp=drive_link",
+        pentaksiran: "https://drive.google.com/drive/folders/1rHBdMODnpqIdnA6Au2XDC2RNDp45Q30b?usp=drive_link",
+        perancangan: "https://drive.google.com/drive/folders/1hhlUK1T0yxwSa-o44Yf1kx_LrnKJrVe9?usp=drive_link",
+        kewangan: "https://drive.google.com/drive/folders/1FZLV9t4trHAW7d9UlSG7aK0DNxY-rAFd?usp=drive_link",
+      },
+      ak: {
+        pengurusan: "https://drive.google.com/drive/folders/1Qgb9chYHZsHS4DLQJq6iycF1xRaNG93m?usp=drive_link",
+        pekeliling: "https://drive.google.com/drive/folders/1671Y09-A6SBSeChkGT6Egq1srVvrtHHe?usp=drive_link",
+        mesyuarat: "https://drive.google.com/drive/folders/17iKpnjhhhpXLy9hgWLVonVnIzti-MzXX?usp=drive_link",
+        pentaksiran: "https://drive.google.com/drive/folders/15c-wySf5MjmP70PndJjJjnzZ9QpsU6eH?usp=drive_link",
+        perancangan: "https://drive.google.com/drive/folders/1V3ZGoPitTFJrx_NydqkD1eAaz7N2SHJ4?usp=drive_link",
+        kewangan: "https://drive.google.com/drive/folders/1VLIuebq2RRxmsbPSG0avRZKloBh-6e8Q?usp=drive_link",
+      },
+      kdp: {
+        pengurusan: "https://drive.google.com/drive/folders/1lC38AB3IPs7q62g5kubqLDe_qqsFIAWs?usp=drive_link",
+        pekeliling: "https://drive.google.com/drive/folders/1M5QqjexIOOTBdenkwUqaBJretaGYJHed?usp=drive_link",
+        mesyuarat: "https://drive.google.com/drive/folders/1WW1xhJ6ieXempqFPCA1wvvjASFg4ni9V?usp=drive_link",
+        pentaksiran: "https://drive.google.com/drive/folders/1tP6cLsktVenCuz-W3JhdFOZ7abdomjHT?usp=drive_link",
+        perancangan: "https://drive.google.com/drive/folders/1s--f45yr4qwVIQ2Mqo9YvmLNs1iD8DgZ?usp=drive_link",
+        kewangan: "https://drive.google.com/drive/folders/1he5kMSEk0WXs4wUXjAzB0iKfGSacNbrh?usp=drive_link",
+      },
+      ldn: {
+        pengurusan: "https://drive.google.com/drive/folders/1hgegolySyLJLf1fpVIA4PRgjaT4KcVY4?usp=drive_link",
+        pekeliling: "https://drive.google.com/drive/folders/1HdTE7kDGkaxnEkq-A274YJIMZ66Wpy3Y?usp=drive_link",
+        mesyuarat: "https://drive.google.com/drive/folders/17VXQGhLokFqp5eRmJLCQmsgZtZLjLIrT?usp=drive_link",
+        pentaksiran: "https://drive.google.com/drive/folders/15WOVVRA_zUiXtSMqvw252ocxpLe5l4I3?usp=drive_link",
+        perancangan: "https://drive.google.com/drive/folders/1gJaRQF_g4ua-Hpm-w2cAGvqPDs6xhD4n?usp=drive_link",
+        kewangan: "https://drive.google.com/drive/folders/14-v_YHvcPhafXS71rWHxv0a9LUvmKo8F?usp=drive_link",
+      },
+      rbt: {
+        pengurusan: "https://drive.google.com/drive/folders/11TZNYnBXLa192tT3lcpoosVggZ3qOMyL?usp=drive_link",
+        pekeliling: "https://drive.google.com/drive/folders/1XWPsFmg5iNTW18mDgll-nIIUoA_47MK_?usp=drive_link",
+        mesyuarat: "https://drive.google.com/drive/folders/1ahR7br4b3ttcvuTCJkwAeiQFOJggvmGZ?usp=drive_link",
+        pentaksiran: "https://drive.google.com/drive/folders/14tlHFpWc_cYCvHCq8mTtTF54nOEYsC4P?usp=drive_link",
+        perancangan: "https://drive.google.com/drive/folders/171pm2x3EYAyixXr3g2HTuenl8cz4k0Yr?usp=drive_link",
+        kewangan: "https://drive.google.com/drive/folders/1rOWshS-ZmWmbSZElL7t5bZ3ZtQsnC9q2?usp=drive_link",
+      },
 
     const badgeText = document.getElementById("badgeText");
     const dashTitle = document.getElementById("dashTitle");
