--- a/akademik.html
+++ b/akademik.html
@@ -1144,7 +1144,11 @@
         perancangan: "https://drive.google.com/drive/folders/171pm2x3EYAyixXr3g2HTuenl8cz4k0Yr?usp=drive_link",
         kewangan: "https://drive.google.com/drive/folders/1rOWshS-ZmWmbSZElL7t5bZ3ZtQsnC9q2?usp=drive_link",
       },
-
+    
+      // add the rest as needed (same structure)
+      pn: {}, rbt: {}, pvma: {}, rek: {}, tvet2: {}
+    };
+    
     const badgeText = document.getElementById("badgeText");
     const dashTitle = document.getElementById("dashTitle");
     const toast = document.getElementById("toast");
